--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Vente de Biens</title>
   <link rel="stylesheet" href="famille.css">
   <script src="script.js" defer></script>
+  <script src="famille.js" defer></script>
 </head>
 
 <body>
