--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 
@@ -11,8 +10,13 @@
 
 <body>
   <div id="app">
+    <!-- Inclusion de la section de sélection de langue -->
     <div id="languageSelection"></div>
+    
+    <!-- Inclusion de la section de formulaire utilisateur -->
     <div id="userForm" class="hidden"></div>
+    
+    <!-- Inclusion de la section de tableau et enregistrement PDF -->
     <div id="propertyTable" class="hidden"></div>
   </div>
 
