--- a/languageSelection.html
+++ b/languageSelection.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Vente de Biens</title>
+  <link rel="stylesheet" href="famille.css">
+  <script src="script.js" defer></script>
+</head>
+
+
+
 <div id="language-selection">
   <h2 id="language-prompt">
     🇲🇦 اختر لغتك :<br />
