--- a/languageSelection.html
+++ b/languageSelection.html
@@ -7,9 +7,7 @@
   <link rel="stylesheet" href="famille.css">
   <script src="script.js" defer></script>
 </head>
-
-
-
+<body>
 <div id="language-selection">
   <h2 id="language-prompt">
     🇲🇦 اختر لغتك :<br />
@@ -31,3 +29,6 @@
     </select>
   </div>
 </div>
+</body>
+
+</html>
