--- a/propertyTableSection.html
+++ b/propertyTableSection.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Vente de Biens</title>
+  <link rel="stylesheet" href="famille.css">
+  <script src="script.js" defer></script>
+</head>
+
+<body>
 <div id="content" class="hidden" aria-live="polite" aria-label="Liste des biens disponibles">
   <button class="btn" onclick="resetApp()" id="btn-back">Retour au menu des langues</button>
   <h2 id="property-title">Nos biens disponibles :</h2>
@@ -27,3 +38,6 @@
   <br />
   <button class="btn" onclick="saveToPDF()" id="btn-save">Enregistrer en PDF</button>
 </div>
+</body>
+
+</html>
