--- a/userForm.html
+++ b/userForm.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Vente de Biens</title>
+  <link rel="stylesheet" href="famille.css">
+  <script src="script.js" defer></script>
+</head>
+<body>
 <div id="user-form" class="hidden" aria-live="polite" aria-label="Formulaire utilisateur">
   <h2 id="welcome-message">Bienvenue !</h2>
   <div class="input-block">
@@ -10,3 +20,6 @@
   </div>
   <button class="btn" id="btn-continue" onclick="submitUser Info()">Continuer</button>
 </div>
+</body>
+
+</html>
