--- a/languageSelection.html
+++ b/languageSelection.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <title>Vente de Biens</title>
   <link rel="stylesheet" href="famille.css">
+<script src="script.js" defer></script>
 
 </head>
 <body>
