--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     async function loadSections() {
       const languageSelectionResponse = await fetch('languageSelection.html');
       const userFormResponse = await fetch('userForm.html');
-      const propertyTableResponse = await fetch('propertyTable.html');
+      const propertyTableResponse = await fetch('propertyTableSection.html');
 
       document.getElementById('languageSelection').innerHTML = await languageSelectionResponse.text();
       document.getElementById('userForm').innerHTML = await userFormResponse.text();
