--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="famille.css">
   <!-- Lien vers le fichier JS -->
   <script src="dictionnaire.js"></script>
+  <script src="script.js"></script>
 </head>
 <style>
  </style>
